[tool.poetry]
name = "adv-mla-lab-7"
version = "0.1.0"
description = ""
authors = ["chuannarongvat <narongvat.chingpayakmon@student.uts.edu.au>"]
readme = "README.md"
packages = [{include = "adv_mla_lab_7"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
